# VolCheck

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  TCPconnector.cpp  TCPconnector.h  client.cpp
include/: TCPstream.h
server/: CMakeLists.txt  StringHandler.cpp  StringHandler.h  TCPacceptor.cpp  TCPacceptor.h  server.cpp
stream/: CMakeLists.txt  TCPstream.cpp
